// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component -> Cube should render the Cube in completed state without throwing an error 1`] = `
<div
  className="Cube_container false"
>
  <div
    className="Cube"
  >
    <div
      className="front"
    />
    <div
      className="back"
    />
    <div
      className="top"
    />
    <div
      className="bottom"
    />
    <div
      className="left"
    />
    <div
      className="right"
    />
  </div>
</div>
`;

exports[`Component -> Cube should render the Cube in loading state without throwing an error 1`] = `
<div
  className="Cube_container loading"
>
  <div
    className="Cube"
  >
    <div
      className="front"
    />
    <div
      className="back"
    />
    <div
      className="top"
    />
    <div
      className="bottom"
    />
    <div
      className="left"
    />
    <div
      className="right"
    />
  </div>
</div>
`;
